--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-body{
+/* body{
     margin: 0px;
     padding: 0px;
-    font-size: 20px;
+    font-size: 15px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: lightslategray;
     color: white;
@@ -12,13 +12,19 @@ body{
     margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
-    background-color:lightgrey;
-    color: darkslategrey;
+    background-color:#313a3d;
+    color: gainsboro;
     border-radius: 20px;
 }
-.container h1{margin-top: 10px;
+.container h1{
+    font-size: 20px;
+    margin-top: 10px;
     text-align: center;
-    color: darkslategrey;
+    color: gainsboro;
+}
+#h1{
+    align-items: center;
+    align-content: left;
 }
 .addtask form {
     margin-left: auto;
@@ -66,7 +72,126 @@ li{
     cursor: pointer;
     background-color: lightseagreen;
   }
+  .btn-edit {
+    margin-left: auto;
+    margin-right: 0;
+    border: none;
+    background-color: #e3e017;
+    color: white;
+    font-weight: bold;
+    padding: 5px 10px;
+    outline: none;
+    width: 10%;
+    font-size: 1.2em;
+  }
+  .btn-edit:hover{
+    cursor: pointer;
+    background-color: #8dd605bb;
+  }
   .btn{
+    margin: 0;
+    padding: 5px 15px;
+    border: none;
+    color: white;
+    font-family: fantasy;
+    background-color: teal;
+    font-size: 1rem;
+    outline: none;
+  }
+  .btn:hover{
+    cursor: pointer;
+    background-color: darkcyan;
+  }
+  .container #input{
+      border-radius: 3px;
+      width: 100%;
+  } */
+
+  body {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+    background-color: white;
+    color: white;
+  }
+  
+  h1 {
+    text-align: center;
+    color: whitesmoke;
+  }
+  
+  .container {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #313a3d;
+    padding: 30px;
+  }
+  
+  .addtask {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  
+  form {
+    display: flex;
+  }
+  
+  input {
+    padding: 15px 10px;
+    outline: none;
+    width: 400px;
+  }
+  
+  .li {
+    width: 100%;
+    color: whitesmoke;
+    margin-top: 20px;
+  }
+  
+  ul {
+    padding: 0;
+  }
+  
+  li {
+    list-style: none;
+    background-color: slategray;
+    border-radius: 10px;
+    margin-top: 15px;
+    display: flex;
+  }
+  
+  li p {
+    margin: 0;
+    padding: 15px;
+    width: 100%;
+  }
+  
+  .btn-delete {
+    margin-left: auto;
+    border: none;
+    background-color: #e31746;
+    color: white;
+    font-weight: bold;
+    padding: 5px 10px;
+    outline: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 10%;
+    font-size: 1.2em;
+  }
+
+  .btn-delete:hover {
+    cursor: pointer;
+    background-color: lightseagreen;
+  }
+
+  .btn {
     padding: 5px 15px;
     border: none;
     color: white;
@@ -75,10 +200,29 @@ li{
     font-size: 1.4rem;
     outline: none;
   }
-  .btn:hover{
+
+  .btn:hover {
     cursor: pointer;
     background-color: darkcyan;
   }
-  .container #input{
-      border-radius: 5px;
+  .btn-edit {
+    padding: 5px 15px;
+    border: none;
+    color: white;
+    font-family: fantasy;
+    background-color: rgb(223, 238, 10);
+    font-size: 1.4rem;
+    outline: none;
+  }
+
+  .btn-edit:hover {
+    cursor: pointer;
+    background-color: rgb(6, 129, 61);
+  }
+
+  .estado {
+    color: whitesmoke;
+  }
+  .edittask{
+      margin-top: 20px;
   }
