--- a/css/style.css
+++ b/css/style.css
@@ -1,113 +1,4 @@
-/* body{
-    margin: 0px;
-    padding: 0px;
-    font-size: 15px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: lightslategray;
-    color: white;
-}
-.container{
-    padding: 2px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color:#313a3d;
-    color: gainsboro;
-    border-radius: 20px;
-}
-.container h1{
-    font-size: 20px;
-    margin-top: 10px;
-    text-align: center;
-    color: gainsboro;
-}
-#h1{
-    align-items: center;
-    align-content: left;
-}
-.addtask form {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    width: 100%;
-}
-#ul li{
-    list-style: none;
-    text-align: center;
-    border-radius: 15px;
-    width: 100%;
-    color: darkslategrey;
-}
-.li{
-    margin-top: 20px;
-    width: 100%;
-    border-radius: 5px;
-}
-li{
-    display: flex;
-    margin-bottom: 5px;
-    background-color: ivory;
-}
-#estado{
-    text-align: center;
-}
-#estado2{
-    text-align: center;
-}
-.btn-delete {
-    margin-left: auto;
-    border: none;
-    background-color: #e31746;
-    color: white;
-    font-weight: bold;
-    padding: 5px 10px;
-    outline: none;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    width: 10%;
-    font-size: 1.2em;
-  }
-  .btn-delete:hover{
-    cursor: pointer;
-    background-color: lightseagreen;
-  }
-  .btn-edit {
-    margin-left: auto;
-    margin-right: 0;
-    border: none;
-    background-color: #e3e017;
-    color: white;
-    font-weight: bold;
-    padding: 5px 10px;
-    outline: none;
-    width: 10%;
-    font-size: 1.2em;
-  }
-  .btn-edit:hover{
-    cursor: pointer;
-    background-color: #8dd605bb;
-  }
-  .btn{
-    margin: 0;
-    padding: 5px 15px;
-    border: none;
-    color: white;
-    font-family: fantasy;
-    background-color: teal;
-    font-size: 1rem;
-    outline: none;
-  }
-  .btn:hover{
-    cursor: pointer;
-    background-color: darkcyan;
-  }
-  .container #input{
-      border-radius: 3px;
-      width: 100%;
-  } */
-
-  body {
+body {
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -116,12 +7,12 @@ li{
     background-color: white;
     color: white;
   }
-  
+
   h1 {
     text-align: center;
     color: whitesmoke;
   }
-  
+
   .container {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -131,31 +22,34 @@ li{
     background-color: #313a3d;
     padding: 30px;
   }
-  
+
   .addtask {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
   }
-  
+
   form {
     display: flex;
   }
-  
+
   input {
     padding: 15px 10px;
     outline: none;
     width: 400px;
+    outline: none;
   }
   
   .li {
     width: 100%;
     color: whitesmoke;
     margin-top: 20px;
+    outline: none;
   }
   
   ul {
     padding: 0;
+    outline: none;
   }
   
   li {
@@ -164,12 +58,15 @@ li{
     border-radius: 10px;
     margin-top: 15px;
     display: flex;
+    outline: none;
   }
   
   li p {
     margin: 0;
     padding: 15px;
     width: 100%;
+    outline: none;
+    text-align: left;
   }
   
   .btn-delete {
